# api/swagger/swagger.yaml
@@ -3,7 +3,7 @@ info:
   version: "0.0.1"
   title: Kabi
 # during dev, should point to your local machine
-host: localhost:5001
+host: 192.168.43.65:5001
 # basePath prefixes all resource paths 
 basePath: /
 # 
@@ -18,7 +18,7 @@ consumes:
 produces:
   - application/json
 paths:
-  /api/addItemImages/{itemId}:
+  /api/addItemImages/{itemId}/{isThumb}:
     # our controller name
     x-swagger-router-controller: item_ctrl
     post:
@@ -38,6 +38,11 @@ paths:
           description: Item Id
           required: true
           type: string
+        - name: isThumb
+          in: path
+          description: Item Id
+          required: true
+          type: boolean          
       responses:
         "200":
           description: Success
@@ -487,7 +492,31 @@ paths:
         default:
           description: Error
           schema:
-            $ref: "#/definitions/ErrorResponse"            
+            $ref: "#/definitions/ErrorResponse"   
+            
+  /api/deleteitem/{item_id}:
+    # our controller name
+    x-swagger-router-controller: item_ctrl
+    delete:
+      description: Add new item by admin
+      # function to be called
+      operationId: deleteItem
+      tags: ['Items Module']
+      parameters:
+        - name: item_id
+          in: path
+          description: Item Id
+          required: true
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/GeneralResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"             
             
   /swagger:
     x-swagger-pipe: swagger_raw
